--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 streamlit==1.44.1
 streamlit-extras==0.6.0
-tensortract2==0.0.0
-vocaltractlab==0.5.4.dev1
+tensortract2==0.0.1
+vocaltractlab==0.5.5
